# NotificationsAPI

./: README.md  channel.py  main.py  notification.py  pyproject.toml
app/: config.js  package-lock.json  package.json
app/client/: script.js
app/db/: db.sql  index.js
app/routes/: routes.js
app/server/: server.js
deploy/: Dockerfile.api  Dockerfile.db  app-deployment.yaml  docker-compose.yml  mysql-config.yaml  mysql-pvc.yaml  mysql-secret.yaml  mysql-service.yaml
src/: config.js  package-lock.json  package.json  startup.sh
src/db/: index.js
src/db/entry/: init.sql
src/public/: index.html  socket.js
src/routes/: routes.js
src/server/: server.js
src/socketio/: socket.js
