[tool.poetry]
name = "notifications"
version = "1.0"
description = "API for notifications"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
redis = "^4.2.1"
aioredis = "^2.0.1"
hiredis = "^2.0.0"
websocket = "^0.2.1"
pip = "^22.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
